Resolves: tdf#111416 missing draw/impress options

Change-Id: I2dc3627e754670b9fa4c799a6728bdb16b3dc983